<resources>
    <string name="app_name">TimeNote</string>
    <string name="toolBar_setting_tittle">Setting</string>
    <string name="toolBar_all_or_today_all_tittle">Diaplay All</string>
    <string name="toolBar_all_or_today_today_tittle">Display Today</string>
    <string name="toolBar_addNewRecord_tittle">Add New Record</string>
    <string name="addNewRecordTittle">Note</string>
    <string name="shortTagTittle">Tag  (Max 30)</string>
    <string name="detailTittle">Details</string>
    <string name="createFinished">Create</string>
    <string name="title_activity_settings">Settings</string>
    <string name="onString">On</string>
    <string name="offString">Off</string>
    <string name="createActivityTittle">Note</string>
    <string name="openMonthDisplayString">Month&#160;&#160;&#160;&#160;Mode</string>
    <string name="setActivityTittle">Setting</string>
    <string name="lightSwitchButton">LED</string>
    <string name="notificationSwitchButton">Notification</string>
    <string name="everydaySwitchButton">On&#160;&#160;&#160;&#160;Date&#160;&#160;&#160;&#160;Changed</string>
    <string name="openAppSwitchButton">On&#160;&#160;&#160;&#160;App&#160;&#160;&#160;&#160;Opened</string>
    <string name="version">Version&#160;&#160;&#160;&#160;2.0</string>
    <string name="email">laoyaocode@outlook.com</string>
</resources>
