<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laoyao.timenote.SettingActivity">
    <android.support.v4.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:textColor="@color/primary_text_dark"
                android:textSize="30sp"
                android:typeface="monospace"
                android:layout_marginBottom="10dp"
                android:text="@string/setActivityTittle"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/see_icon"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/openMonthDisplayString"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"/>
                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/monthModeSwitchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:kswThumbColor="@color/accent"
                    app:kswAnimationDuration="300"
                    app:kswBackMeasureRatio="2"
                    app:kswThumbWidth="20dp"
                    />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_alignParentBottom="true">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:background="@drawable/divider_color"
                        android:layout_gravity="center"></View>
                </FrameLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/notification_icon"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/notificationSwitchButton"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"/>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/openNotificationSwitchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:kswThumbColor="@color/notificationSwitch"
                    app:kswAnimationDuration="300"
                    app:kswBackMeasureRatio="2"
                    app:kswThumbWidth="20dp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/light_icon"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/lightSwitchButton"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"/>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/openLEDSwitchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:kswThumbColor="@color/lightSwitch"
                    app:kswAnimationDuration="300"
                    app:kswBackMeasureRatio="2"
                    app:kswThumbWidth="20dp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/everyday_icon"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/everydaySwitchButton"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"/>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/dateChangeSwitchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:kswThumbColor="@color/everydayAndOpenSwitch"
                    app:kswAnimationDuration="300"
                    app:kswBackMeasureRatio="2"
                    app:kswThumbWidth="20dp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/open_icon"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/openAppSwitchButton"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"/>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/appOpenSwitchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:kswThumbColor="@color/everydayAndOpenSwitch"
                    app:kswAnimationDuration="300"
                    app:kswBackMeasureRatio="2"
                    app:kswThumbWidth="20dp"
                    />
            </RelativeLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_alignParentBottom="true">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@drawable/divider_color"
                    android:layout_gravity="center"></View>
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/notification_big_icon"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/version"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/email_icon"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/email"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"/>

            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
